qa-theme/Donut-theme/css/donut.css
/* ... */
.user-box-inner .user-data {
  margin-top: 5px;
}
.user-box-inner .user-data .qa-user-link {
  font-size: 18px;
}
.user-box-inner .user-data .qa-user-link:hover {
  text-decoration: none;
}
/* categories page */
.qa-browse-cat-list {
  list-style: none;
  margin: 0;
  padding: 0;
}
.qa-browse-cat-list-1 {
  font-size: 18px;
}
.qa-browse-cat-list-2 {
  font-size: 14px;
  margin-left: 20px;
}
.qa-browse-cat-list-3 {
  font-size: 14px;
  margin-left: 20px;
}
.qa-browse-cat-list-4 {
  font-size: 14px;
  margin-left: 20px;
}
.qa-browse-cat-item {
  font-weight: bold;
  color: #333333;
  margin: 0;
  padding: 10px 0;
  border-bottom: 1px solid transparent;
  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  border-color: #eeeeee;
}
.qa-browse-cat-list-2 .qa-browse-cat-item,
.qa-browse-cat-list-3 .qa-browse-cat-item,
.qa-browse-cat-list-4 .qa-browse-cat-item {
  border: none;
}
.qa-browse-cat-closed {
  list-style: none;
  color: #333333;
}
.qa-browse-cat-open {
  list-style: none;
  color: #555555;
}
a.qa-browse-cat-link,
a.qa-browse-cat-link:visited {
  font-weight: 700;
  text-decoration: none;
  color: #333333;
}
.qa-browse-cat-list-3 .qa-browse-cat-item {
  padding: 5px 0;
}
.qa-browse-cat-note {
  font-weight: 400;
  font-size: 14px;
  color: #555555;
}
.qa-browse-cat-nolink {
  cursor: pointer;
}
/* Question view */
.qa-part-q-view {
  border: 1px solid transparent;
  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  border-color: #dddddd;
  border-radius: 5px;
  padding: 5px;
}
.qa-q-view .qa-voting {
  width: 75px;
}
@media only screen and (max-width: 767px) {
  .qa-q-view .qa-voting {
    width: 65px;
  }
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .qa-q-view .qa-voting {
    width: 65px;
  }
}
.qa-part-q-view-closed {
  border: 1px solid transparent;
  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  border-color: #dddddd;
  border-color: #bce8f1;
}
.qa-part-q-view-solved {
  border: 1px solid transparent;
  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  border-color: #dddddd;
  border-color: #d6e9c6;
}
.qa-q-view {
  position: relative;
}
.qa-q-view-main {
  float: left;
  width: 90%;
  min-height: 1px;
  padding: 0 5px 10px 5px;
}
@media only screen and (max-width: 767px) {
  .qa-q-view-main {
    width: 100%;
    margin-top: 5px;
  }
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .qa-q-view-main {
    width: 85%;
  }
}
.qa-q-view-content {
  margin-bottom: 20px;
  font-size: 14px;
  word-wrap: break-word;
}
.qa-q-view-content .entry-content {
  font-size: 18px;
}
.qa-q-view-content .entry-content img {
  display: block;
  max-width: 100%;
}
.qa-q-view-avatar {
  display: inline-block;
  vertical-align: middle;
  margin-right: 5px;
}
.qa-q-view-meta {
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
}
.qa-q-view-follows {
  background-color: #d9edf7;
  border-color: #bce8f1;
  color: #31708f;
}
.qa-q-view-follows hr {
  border-top-color: #a6e1ec;
}
.qa-q-view-follows .alert-link {
  color: #245269;
}
.qa-q-view-follows-link {
  color: #245269;
}
.qa-q-view-closed {
  background-color: #d9edf7;
  border-color: #bce8f1;
  color: #31708f;
  color: #245269;
}
.qa-q-view-closed hr {
  border-top-color: #a6e1ec;
}
.qa-q-view-closed .alert-link {
  color: #245269;
}
.qa-q-view-closed-content {
  font-weight: normal;
}
.qa-q-view-extra {
  font-size: 14px;
  margin-bottom: 18px;
}
.qa-q-view-extra-content {
  font-weight: 700;
}
.qa-q-view-when-data {
  font-weight: 700;
}
.qa-q-view-who-title {
  font-size: 14px;
  font-weight: 700;
  color: #555555;
}
.qa-q-view-who-data,
.qa-q-view-where-data {
  color: #337ab7;
}
.qa-q-view-flags {
  display: inline-block;
  padding: 2px 4px;
  color: #a94442;
  background-color: #f2dede;
  border: 1px solid #ebccd1;
  border-radius: 3px;
}
.qa-q-view-buttons {
  margin-top: 16px;
}
.qa-q-view-hidden .qa-voting {
  color: #555555;
}
.qa-q-view-hidden .qa-q-view-content {
  color: #555555;
}
.qa-q-view-hidden .qa-q-view-meta {
  color: #777777;
}
.qa-q-view-hidden .qa-user-link {
  color: #555555;
}
.qa-q-view-hidden .qa-q-view-who-title {
  color: #555555;
}
.qa-q-view-hidden .qa-category-link {
  color: #555555;
}
.qa-q-view-hidden .qa-tag-link {
  color: #555555;
  opacity: 0.5;
}
/* Answer form */
.qa-part-a-form {
  margin-bottom: 20px;
}
.qa-part-a-form .qa-a-form {
  border: 1px solid transparent;
  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  border-color: #dddddd;
  padding: 5px;
  border-radius: 4px;
}
.qa-part-a-form .qa-a-form h2 {
  margin: 0 -5px;
  font-size: 22px;
  border-bottom: 1px solid #e2e2e2;
  padding: 15px;
}
.qa-part-a-form .qa-a-form h2:last-child {
  border-bottom: transparent;
  font-size: 18px;
  margin: -5px -5px;
  border-radius: 4px;
  background-color: #f2dede;
  border-color: #ebccd1;
  color: #a94442;
}
.qa-part-a-form .qa-a-form h2:last-child hr {
  border-top-color: #e4b9c0;
}
.qa-part-a-form .qa-a-form h2:last-child .alert-link {
  color: #843534;
}
.qa-part-a-form .qa-a-form h2:last-child a {
  color: #843534;
}
.qa-part-a-list > h2 {
  font-size: 20px;
  margin: 10px 0;
  padding-bottom: 10px;
  color: #337ab7;
  border-bottom: 1px dashed #e2e2e2;
}
.qa-a-list-item {
  position: relative;
  padding: 20px 10px;
  margin-bottom: 10px;
  border: 1px solid transparent;
  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  border-color: #dddddd;
  border-radius: 5px;
}
.qa-a-list-item-selected {
  border: 2px dashed #d6e9c6;
}
.qa-a-list-item-hidden {
  background-color: #fbfbfb;
  opacity: 0.8;
}
.qa-a-list-item-hidden .qa-voting {
  color: #555555;
}
.qa-a-list-item-hidden .qa-a-item-content {
  color: #777777;
}
/* ... */

